--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required( VERSION 3.10 )
 
-project( lhwsmodelapi )
+project( lhwsmodelapi
+         DESCRIPTION "lhwsmodelapi libraries"
+         HOMEPAGE_URL "https://github.com/fbuonaro/lhwsmodelapi"
+         LANGUAGES CXX
+         VERSION 1.0.0  )
 
 enable_testing()
 
